# requiescat

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build-desktop.yml
docs/: code-design.md  functional-programming.md  module-boundaries.md
locales/: en.ftl  ro.ftl
packaging/: RELEASING.md
packaging/icons/: requiescat.icns
packaging/linux/: app.requiescat.desktop  app.requiescat.metainfo.xml  app.requiescat.yml
packaging/macos/: Info.plist
packaging/release-notes/: en.md  ro.md
packaging/windows/: Product.wxs
src/: cemetary_map.rs  label_layout.rs  lib.rs  localization.rs  main.rs  mouse.rs  theme.rs  updater.rs  windowing.rs
src/export/pdf/: content.rs  delimiter_rendering.rs  layout.rs  map_geometry.rs  mod.rs  render.rs  writer.rs
src/models/: cemetery.rs  cemetery_map.rs  coordinate.rs  date.rs  delimiter.rs  grave.rs  grave_gps.rs  grave_rectangle.rs  ids.rs  mod.rs  person.rs  person_directory.rs  tags.rs
src/persistence/: mod.rs
src/screens/: confirmation_dialog.rs  map_editor.rs  mod.rs  start_menu.rs
src/screens/map/: camera.rs  delimiter_drawing.rs  drawing.rs  geometry.rs  interaction.rs  map_canvas.rs  map_editor.rs  mod.rs  toolbar.rs
